--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
    "bugs": {
       "url": "https://github.com/dev-hans-programmer/microservice-ts-template/issues"
    },
-   "homepage": "https://github.com/dev-hans-programmer/microservice-ts-template#readme"
+   "homepage": "https://github.com/dev-hans-programmer/microservice-ts-template#readme",
+   "devDependencies": {
+      "@types/node": "^24.3.0",
+      "typescript": "^5.9.2"
+   }
 }
