--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-   "name": "nodejs-ts-api-template",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
-   "scripts": {
-      "dev": "node src/index",
-      "test": "echo \"Error: no test specified\" && exit 1"
-   },
-   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/dev-hans-programmer/microservice-ts-template.git"
-   },
-   "author": "Hasan Ali",
-   "license": "ISC",
-   "bugs": {
-      "url": "https://github.com/dev-hans-programmer/microservice-ts-template/issues"
-   },
-   "homepage": "https://github.com/dev-hans-programmer/microservice-ts-template#readme",
-   "devDependencies": {
-      "@types/node": "^24.3.0",
-      "typescript": "^5.9.2"
-   }
+  "name": "nodejs-ts-api-template",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "node src/index",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format:check": "prettier . --check",
+    "format:fix": "prettier . --write"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dev-hans-programmer/microservice-ts-template.git"
+  },
+  "author": "Hasan Ali",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dev-hans-programmer/microservice-ts-template/issues"
+  },
+  "homepage": "https://github.com/dev-hans-programmer/microservice-ts-template#readme",
+  "devDependencies": {
+    "@types/node": "^24.3.0",
+    "prettier": "3.6.2",
+    "typescript": "^5.9.2"
+  }
 }
