--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "nodejs-ts-api-template",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "node src/index",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format:check": "prettier . --check",
-    "format:fix": "prettier . --write"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dev-hans-programmer/microservice-ts-template.git"
-  },
-  "author": "Hasan Ali",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dev-hans-programmer/microservice-ts-template/issues"
-  },
-  "homepage": "https://github.com/dev-hans-programmer/microservice-ts-template#readme",
-  "devDependencies": {
-    "@types/node": "^24.3.0",
-    "prettier": "3.6.2",
-    "typescript": "^5.9.2"
-  }
+    "name": "nodejs-ts-api-template",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "node src/index",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "format:check": "prettier . --check",
+        "format:fix": "prettier . --write",
+        "lint:check": "eslint . ",
+        "lint:fix": "eslint . --fix"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/dev-hans-programmer/microservice-ts-template.git"
+    },
+    "author": "Hasan Ali",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/dev-hans-programmer/microservice-ts-template/issues"
+    },
+    "homepage": "https://github.com/dev-hans-programmer/microservice-ts-template#readme",
+    "devDependencies": {
+        "@eslint/js": "^9.34.0",
+        "@types/node": "^24.3.0",
+        "eslint": "^9.34.0",
+        "prettier": "3.6.2",
+        "typescript": "^5.9.2",
+        "typescript-eslint": "^8.42.0"
+    }
 }
