--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   },
   "lint-staged": {
     "*.ts": [
-      "npm run format:check",
-      "npm run lint:check"
+      "npm run format:fix",
+      "npm run lint:fix"
     ]
   }
 }
