--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nodejs-ts-api-template",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "node src/index",
+    "dev": "nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format:check": "prettier . --check",
     "format:fix": "prettier . --write",
@@ -25,11 +25,14 @@
   "devDependencies": {
     "@eslint/js": "^9.34.0",
     "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
     "eslint": "^9.34.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
+    "nodemon": "^3.1.10",
     "prettier": "3.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.42.0"
   },
@@ -40,6 +43,7 @@
     ]
   },
   "dependencies": {
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0"
   }
 }
