--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "http-errors": "^2.0.0",
+    "http-status-codes": "^2.3.0",
     "winston": "^3.17.0"
   }
 }
