--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "format:check": "prettier . --check",
     "format:fix": "prettier . --write",
     "lint:check": "eslint . ",
@@ -26,12 +26,15 @@
     "@eslint/js": "^9.34.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
     "eslint": "^9.34.0",
     "husky": "^9.1.7",
+    "jest": "^30.1.3",
     "lint-staged": "^16.1.6",
     "nodemon": "^3.1.10",
     "prettier": "3.6.2",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.42.0"
