--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "test": "jest",
+    "test": "jest --watch --runInBand",
     "format:check": "prettier . --check",
     "format:fix": "prettier . --write",
     "lint:check": "eslint . ",
@@ -28,6 +28,7 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.34.0",
     "husky": "^9.1.7",
     "jest": "^30.1.3",
@@ -50,6 +51,7 @@
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
+    "supertest": "^7.1.4",
     "winston": "^3.17.0"
   }
 }
