--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
     "test": "jest --watch --runInBand",
+    "build:prod": "rm -rf dist dist && tsc && cp .env.prod dist/.env.prod",
     "format:check": "prettier . --check",
     "format:fix": "prettier . --write",
     "lint:check": "eslint . ",
     "lint:fix": "eslint . --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "start": "cross-env NODE_ENV=prod node dist/server",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "repository": {
     "type": "git",
@@ -47,11 +50,16 @@
     ]
   },
   "dependencies": {
+    "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
+    "pg": "^8.14.1",
+    "reflect-metadata": "^0.2.2",
     "supertest": "^7.1.4",
-    "winston": "^3.17.0"
+    "typeorm": "0.3.26",
+    "winston": "^3.17.0",
+    "zod": "^4.1.5"
   }
 }
