--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ jspm_packages/
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
+certs/
+
 # TypeScript cache
 *.tsbuildinfo
 
