--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.34.0",
@@ -57,6 +58,7 @@
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "supertest": "^7.1.4",
