--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.34.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
@@ -53,14 +54,20 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-jwt": "^8.5.1",
+    "express-oauth2-jwt-bearer": "^1.7.1",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
+    "node-jose": "^2.2.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
+    "rsa-pem-to-jwk": "^1.1.3",
     "supertest": "^7.1.4",
     "typeorm": "0.3.26",
     "winston": "^3.17.0",
